--- a/index.html
+++ b/index.html
@@ -4,189 +4,122 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my web page</title>
+    <title>Home Appliances</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- code for font awsome cdn -->
-  <!-- code for linking css file -->
 
+<section class="review" id="review">
 
-  <!-- code for linking css file -->
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-  <!-- header section-->
-  <header class="header">
-    <a href="#" class="logo">
-      <i class="fa fa-cart-arrow-down" aria-hidden="true" ></i> HOME ESSENTIALS
-    </a>
-   <nav class="navbar">
-    <a href="#Home">Home</a>
-    <a href="#Features">Features</a>
-    <a href="#Products">Products</a>
-    <a href="#Categories">Categories</a>
-    <a href="#Reviews">Reviews</a>
-   </nav>
-
-   <div class="icons">
-    <div class="fa fa-bars" id="menu-btn"></div>
-    <div class="fa fa-search" id="search-btn"></div>
-    <div class="fa fa-shopping-cart" id="cart-btn"></div>
-    <div class="fa fa-user" id="login-btn"></div>
-   </div>
-
-  </header>
-<!-- header section-->
-
- <!--banner section-->
- <section>
-   <div class="Home" id="Home">
-    <div class="content">
-      <h3><span>Quality Products</span> At Your Doorstep</h3>
-      <p>Get all your essentials for around the home from bedding sets, home décor, garden furniture and tech</p>
-      <a href="#" class="btn">Shop Now</a>
-    </div>
-   </div>
- </section>
-
-    <!-- slider html start -->
-    <div class="slider">
-      <div class="slides">
-        <div class="slide"><img src="image/slider1.jpg"></div>
-        <div class="slide"><img src="image/slider2.jpg"></div>
-        <div class="slide"><img src="image/slider4.jpg"></div>
-      </div>
-    </div>
-    <!-- slider html end -->
-
- 
-  
-</body>
-</html>
-
-   <section class="features " >
-    <h1 class="heading"> Our <span>features</span> </h1>
-    <div class="container">
+    <h1 class="heading"> Customer's <span>Review</span> </h1>
+    <div class="box-container">
         <div class="box">
-            <img src="https://i.pinimg.com/736x/e3/26/6f/e3266f9eb6d4f180d845f5ff77c8afd7.jpg"><h3> fresh and organic</h3><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, similique obcaecati maiores quis libero nemo facere officia mollitia, cum, nihil eaque nisi itaque eligendi? Similique unde ullam laudantium corporis sapiente!</p><br>
-            <button class="btn">Read MORE</button>
+            <img src="image/image-1.jpg">
+            <p>Great customer service! The man I spoke with was very helpful in answering questions as well as helping in finding the best appliances for my home. The service is smooth and straightforward.</p>
+            <h3>hafsa shahzad</h3>
+            <div class="stars">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+            </div>
         </div>
-        <div class="box"><img src="https://t4.ftcdn.net/jpg/03/32/79/91/360_F_332799148_55PKYZ6OkLWfuQTTZ0jeD8gzNnweZ0mU.jpg"><h3> free delivery</h3><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, similique obcaecati maiores quis libero nemo facere officia mollitia, cum, nihil eaque nisi itaque eligendi? Similique unde ullam laudantium corporis sapiente!</p> <br>
-            <button class="btn">Read MORE</button> 
+        <div class="box">
+            <img src="image/image-2.jpg">
+            <p>The product arrived in good condition.I really loved the designs of all the products. It looked exactly like the pictures on the website and am so excited to use them all. Fast deliver. Highly recomended.</p>
+            <h3>saim ahmed</h3>
+            <div class="stars">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half"></i>
+            </div>
         </div>
-        
-        <div class="box"><img src="https://www.shutterstock.com/image-vector/vector-concept-payment-options-flat-260nw-248825623.jpg"><h3> payment method</h3><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, similique obcaecati maiores quis libero nemo facere officia mollitia, cum, nihil eaque nisi itaque eligendi? Similique unde ullam laudantium corporis sapiente!</p> <br>
-            <button class="btn">Read MORE</button>
+        <div class="box">
+            <img src="image/image-3.jpg">
+            <p>Come on, beautiful!! Much earlier than expected, I was demoralized instead I have to change my mind, since it was the 1st time, thanks and went better than expected in terms of delivery. Object seems valid.</p>
+            <h3>Marium bint-e-sahar</h3>
+            <div class="stars">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half"></i>
+            </div>
+        </div>
+        <div class="box">
+            <img src="image/image-4.jpg">
+            <p>Received before due date, packaging was really good, everything sent and packed nicely in container plus instructions quite sturdy 12 in 1 Multifunctional vegetable slicer with basket.Very happy with the order.</p>
+            <h3>muhammad abdullah</h3>
+            <div class="stars">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+            </div>
+        </div>
     </div>
-   </section>
-   <section class="products">
-    <h1 class="heading"> Our <span>products</span></h1>
-    <div class="products-slider">
-        <div class="wrapper">
-            <div class="box">
-               <img src="https://thumbs.dreamstime.com/b/orange-fruit-isolated-white-background-109006430.jpg" alt=""> 
-               <h1>Fresh orange</h1>
-               <div class="price">$12.99/- - 15.99/-</div>
-               <button class="button">Add to cart</button> 
+</section>
+<!-- review section end -->
+
+
+<!-- footer section start-->
+
+<section class="footer">
+    <div class="box-container">
+        <div class="box">
+            <h3>Home essentials <i class="fa fa-cart-arrow-down"></i></h3>
+            <p> feel free to contact us on our social media handlers. All the links are given below.</p>
+            <div class="share">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+            </div>
         </div>
+
+        <div class="box">
+            <h3>contact info</h3>
+            <a href="#" class="links"> <i class="fa fa-phone"></i>0321-1009249</a>
+            <a href="#" class="links"> <i class="fa fa-phone-square"></i>021-111-111-105</a>
+            <a href="#" class="links"> <i class="fa fa-envelope"></i>info@example.com</a>
+            <a href="#" class="links"> <i class="fa fa-map-marker"></i>karachi, pakistan</a>
+        </div>
+
+        <div class="box">
+            <h3>quick links</h3>
+            <a href="#" class="links"> <i class="fa fa-arrow-right"></i>home</a>
+            <a href="#" class="links"> <i class="fa fa-arrow-right"></i>features</a>
+            <a href="#" class="links"> <i class="fa fa-arrow-right"></i>products</a>
+            <a href="#" class="links"> <i class="fa fa-arrow-right"></i>categories</a>
+            <a href="#" class="links"> <i class="fa fa-arrow-right"></i>reviews</a> 
+        </div>
+
+        <div class="box">
+            <h3>newsletter</h3>
+            <p>subscribe for latest updates</p>
+            <input type="email" placeholder="your email" class="email">
+            <input type="submit" value="subscribe" class="btn">
+            <div class="payment-methods">
+                <a href="#" class="fa fa-cc-mastercard"></a>
+                <a href="#" class="fa fa-cc-visa"></a>
+                <a href="#" class="fa fa-credit-card"></a>
+                <a href="#" class="fa fa-paypal"></a>
+            </div>
+
+
+        </div>
+
     </div>
-    <div class="box">
-        <img src="https://www.shutterstock.com/image-photo/pile-beef-cubes-isolated-on-260nw-1452606740.jpg" alt=""> 
-        <h1>Fresh meat</h1>
-        <div class="price">$12.99/- - 15.99/-</div>
-        <button class="button">Add to cart</button> 
- </div>
- <div class="box">
-    <img src="https://media.istockphoto.com/id/523635727/photo/cabbage.jpg?s=612x612&w=0&k=20&c=qcIYBtX0PUDOlJ6W9kCa866YnFnDxPQmNgm7NuKaHOQ=" alt=""> 
-    <h1>Fresh cabbage </h1>
-    <div class="price">$12.99/- - 15.99/-</div>
-    <button class="button">Add to cart</button> 
-</div>
+<div class="credit">created by <span>TECH WHIZ</span> | all rights reserved</div>
 
-<div class="box">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5FcCH6k8cDAp6M9Fy2AmW0IS-CVNaXg8SXw&usqp=CAU" alt=""> 
-    <h1>Fresh Onion</h1>
-    <div class="price">$12.99/- - 15.99/-</div>
-    <button class="button">Add to cart</button> 
-</div>
-
-<div class="box">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4MI9YIf58OghzwRSCFKj8UKxGG3z8ogJakqXj-EZ9vg&s" alt=""> 
-    <h1>Fresh patotos</h1>
-    <div class="price">$12.99/- - 15.99/-</div>
-    <button class="button">Add to cart</button> 
-</div>
-
-
-<div class="box">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRp7fVM1Vt_HE6ReOGRbHxM25sRDHqgybD_3A&usqp=CAU" alt=""> 
-    <h1>Fresh chicken</h1>
-    <div class="price">$12.99/- - 15.99/-</div>
-    <button class="button">Add to cart</button> 
-</div>
-
-
-
-   </section>
-   <section class="categories" id="categories">
-    <h1 class="heading"> products <span> categories</span></h1>
-    <div class="items">
-       <div class="box">
-        <img src="https://img.freepik.com/premium-vector/basket-with-vegetables-cartoon-vector-illustration-vegetarian-nutrition-market-concept_449384-226.jpg?w=2000">
-        <h3>Vegetables</h3>
-        <p> up to 45% off</p>
-        <button class="button">shop now</button>
-       </div> 
-    </div>
-    <div class="items">
-    <div class="box">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmMFUr4TWHqkYckkiJqqEqBFqYy9gQKQ7N3w&usqp=CAU">
-        <h3>fresh fruit</h3>
-        <p> up to 45% off</p>
-        <button class="button">shop now</button>
-        </div>
-       </div> 
-
-       <div class="items">
-       <div class="box">
-        <img src="https://d1n5l80rwxz6pi.cloudfront.net/general/blog/importance-of-dairy-products.jpg">
-        <h3>dairy products</h3>
-        <p> up to 45% off</p>
-        <button class="button">shop now</button>
-        </div>
-       </div> 
-       <div class="items">
-       <div class="box">
-        <img src="https://media.istockphoto.com/id/1212824120/photo/assortment-of-meat-and-seafood.jpg?s=612x612&w=0&k=20&c=U_wNgPDs2CeWuOPEj0Hts1btABGM3gL4ftjficNvJZM=">
-        <h3>fresh meat</h3>
-        <p> up to 45% off</p>
-        <button class="button">shop now</button>
-       </div>
-       </div> 
-
-   </section>
+</section>
+    <!-- footer section end -->
 </body>
 </html>
-
-
-
-
-
-
-
-
- 
-
-
-
-
-
-
-
